# b2rust

./: .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  Dockerfile  README.md  TODO.md  gen_bxml.sh
.github/workflows/: cmake-multi-platform.yml
doc/: README.md  manuel-utilisateur.md  specification.tex  usermanual.md
files/: b2rust_exceptions.cfg  b2rust_exceptions.cfg.template  b2rust_operations.cfg  b2rust_operations.cfg.template  b2rust_types.cfg  b2rust_types.cfg.template  b2rust_types.mch
src/: .clang-format  CMakeLists.txt  b2rust.cpp  b2rust.h  debug.cpp  debug.h  error_codes.h  input.cpp  input.h
src/checker/: checker.cpp  checker.h
src/converter/: arrayaccess.cpp  arrayaccess.h  block.cpp  block.h  declaration.cpp  declaration.h  delegatecall.cpp  delegatecall.h  function.cpp  function.h  functioncall.cpp  functioncall.h  match.cpp  match.h  miscellaneous.cpp  miscellaneous.h  r_assignement.cpp  r_assignement.h  r_case.cpp  r_case.h  r_enum.cpp  r_expression.cpp  r_expression.h  r_if.cpp  r_if.h  r_instruction.cpp  r_instruction.h  r_module.cpp  r_module.h  r_while.cpp  r_while.h  types.cpp  types.h
src/converter/r_predicate/: r_predicate.cpp  r_predicate.h
src/parser/: expression_leaf.cpp  expression_leaf.h  miscellaneous.cpp  miscellaneous.h  parser.cpp  parser.h  parser.tcc  recognized_types.cpp  recognized_types.h  tinyxml2ext.cpp  tinyxml2ext.h
src/parser/bxml/: abstraction.cpp  abstraction.h  assertion.cpp  assertion.h  assignementsub.cpp  assignementsub.h  binaryexp.cpp  binaryexp.h  binarypred.cpp  binarypred.h  binarypredop.cpp  binarypredop.h  booleanexp.cpp  booleanexp.h  booleanliteral.cpp  booleanliteral.h  case_sub.cpp  case_sub.h  emptyset.cpp  emptyset.h  enumeratedvalues.cpp  enumeratedvalues.h  exp.cpp  exp.h  exp.tcc  expcomparison.cpp  expcomparison.h  expressiontype.cpp  expressiontype.h  id.cpp  id.h  ifsub.cpp  ifsub.h  initialisation.cpp  initialisation.h  instancelisttype.cpp  instancelisttype.h  instruction.cpp  instruction.h  integerliteral.cpp  (+65 more)
src/printer/: component_printers.cpp  instances_printer.cpp  instances_printer.h  printer.cpp  printer.h
src/util/: report.cpp  report.h  tools.cpp  tools.h
tests/: gen_bxml.sh  gen_tests.sh  test_command.sh  tests_file.cmake
tests/base_module/: check.sh  test.sh
tests/base_module/import_type/: import_type.bxml  import_type.mch  import_type_i.bxml  import_type_i.imp  imported1.bxml  imported1.mch  imported1_i.bxml  imported1_i.imp  imported2.bxml  imported2.mch  imported2_i.bxml  imported2_i.imp  seen.bxml  seen.mch  seen.rs.impl
tests/base_module/main_check_01/: g_standard_types.bxml  g_standard_types.mch  g_standard_types.rs.impl  main_check_01.bxml  main_check_01.mch  main_check_01_i.bxml  main_check_01_i.imp
tests/base_module/main_config_01/: c4b_types.bxml  c4b_types.mch  c4b_types.rs.impl  main_config_01.bxml  main_config_01.mch  main_config_01_i.bxml  main_config_01_i.imp  main_config_01_r.bxml  main_config_01_r.ref
tests/base_module/main_module_01/: b2rust_types.mch  main.rs  main_module_01.bxml  main_module_01.mch  main_module_01_01.bxml  main_module_01_01.mch  main_module_01_01.rs.impl  main_module_01_i.bxml  main_module_01_i.imp
tests/base_module/main_oprust_04/: b2rust_types.mch  c4b_types.bxml  c4b_types.mch  main.rs  main_oprust_04.bxml  main_oprust_04.mch  main_oprust_04_i.bxml  main_oprust_04_i.imp
tests/base_module/main_refinement_05/: lala.bxml  lala.ref  lili.bxml  lili.ref  lola.bxml  lola.imp  lolo.bxml  lolo.mch  lolo.rs.impl  main.rs  main_refinement_05.bxml  main_refinement_05.mch  tata.bxml  tata.ref  titi.bxml  titi.imp  toto.bxml  toto.ref
tests/base_module/main_string_01/: error.bxml  error.mch  error.rs.impl  main.rs  main_string_01.bxml  main_string_01.mch  main_string_01_i.bxml  main_string_01_i.imp
tests/c4b/: test.sh
tests/c4b/CC/: CC.bxml  CC.mch  DD.bxml  DD.mch  DD.rs.impl  IMPI.bxml  IMPI.imp  b2rust_types.mch
tests/c4b/expression_1_mch/: b2rust_types.mch  expression_1_imp.bxml  expression_1_imp.imp  expression_1_mch.bxml  expression_1_mch.mch  expression_2_imp.bxml  expression_2_imp.imp  expression_2_mch.bxml  expression_2_mch.mch
tests/c4b/operloc_comment/: operloc_comment.bxml  operloc_comment.mch  operloc_comment_i.bxml  operloc_comment_i.imp
tests/c4b/saturn/: AtelierB  Configuration.bxml  Configuration.mch  Configuration1.bxml  Configuration1.mch  Configuration1.rs.impl  Configuration_i.bxml  Configuration_i.imp  Erreurs.bxml  Erreurs.mch  Erreurs.rs.impl  PMP.bxml  PMP.mch  PMP.rs.impl  Precompil.bxml  Precompil.mch  Precompil.rs.impl  SPI.bxml  SPI.mch  SPI.rs.impl  Tests.bxml  Tests.mch  Tests.rs.impl  Traitement.bxml  Traitement.mch  Traitement_i.bxml  Traitement_i.imp  Types.bxml  Types.mch  Types.rs.impl  Watchdogs.bxml  Watchdogs.mch  Watchdogs.rs.impl  saturn.bxml  saturn.mch  saturn_i.bxml  saturn_i.imp
tests/c4b/testlang14/: BASIC_IO.bxml  testlang14.bxml  testlang14.mch  testlang14_i.bxml  testlang14_i.imp
tests/c4b/testlang51/: BASIC_IO.mch  BASIC_IO.rs.impl  operation_etendue_1_imp.bxml  operation_etendue_1_imp.imp  operation_etendue_1_mch.bxml  operation_etendue_1_mch.mch  sees_extends_imp.bxml  sees_extends_imp.imp  sees_extends_mch.bxml  sees_extends_mch.mch  simple_extends_imp.bxml  simple_extends_imp.imp  (+2 more)
tests/call_code/: test.sh
tests/comparison/: test.sh
tests/errors/: test.sh
tests/main/: test.sh
tests/reference/: assertion_01.rs  assertion_02.rs  becomes_in.rs  concrete_constant_01.rs  counter.rs  demo_01.rs  expression_01.rs  expression_02.rs  expression_03.rs  expression_04.rs  global_constant.rs  global_constant_multiple.rs  global_variable.rs  global_variable_multiple.rs  global_variable_multiple_2.rs  global_variable_multiple_3.rs  if_05.rs  if_06.rs  if_07.rs  if_08.rs  if_09.rs  if_1.rs  if_10.rs  if_11.rs  if_12.rs  if_2.rs  if_3.rs  if_4.rs  local_variable_01.rs  local_variable_02.rs  local_variable_03.rs  local_variable_04.rs  operation_01.rs  operation_02.rs  operation_06.rs  operation_07.rs  operation_08.rs  operation_09.rs  several_operations.rs  skip_operation.rs  (+4 more)
(+848 files in other folders)
